removed absolute position from logo to prevent other elements outside from sitting behind logo top left

--- a/space-tourism-website-main/styles/style.css
+++ b/space-tourism-website-main/styles/style.css
@@ -46,9 +46,6 @@ main{
 }
 
 .logo{
-    position: absolute;
-    left: 0;
-    top: 0;
     padding: 8px;
 }
 
